rlang/tests/tests_resources/invalid_tests/invalid_feature.rlang
Feature test := S + 4 == S'
Feature test2 := test3 / test4[1[2]

